# open-advisor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  STRATEGY.md  UPGRADING.md  profile.md  pyproject.toml
accounts/: README.md  TEMPLATE.md
decisions/: README.md
examples/example-user/: README.md  STRATEGY.md  goals.md  principles.md  profile.md  rules.md
memory/: README.md  onboarding.md
memory/decisions/: README.md
memory/facts/: README.md
memory/feedback/: README.md
memory/patterns/: README.md
memory/preferences/: README.md
memory/watchlist/: README.md
reports/: README.md
routines/: afford.md  annual.md  automation-audit.md  consolidate-memory.md  daily.md  debt-payoff.md  import.md  life-event.md  loss-aversion.md  memory-update.md  mode-detect.md  monthly.md  onboarding.md  quarterly.md  rebalance.md  rules-enforcement.md  schedule.md  strategy-refresh.md  temptation-check.md  weekly.md  windfall.md
scenarios/: README.md
src/finance_advisor/: __init__.py  __main__.py  analytics.py  cli.py  (+8 more)
state/: README.md  estate.md  net-worth.md
templates/: goals.md  principles.md  rules.md
tests/: conftest.py  test_account_edit.py  test_afford.py  test_analytics.py  test_anomalies.py  test_automation.py  test_balance.py  test_cashflow.py  test_categorize_engine.py  test_cli.py  test_fees.py  test_import_flow.py  test_importers.py  test_init.py  test_insights.py  test_mode.py  test_networth.py  test_normalize.py  test_payoff.py  test_rebalance.py  test_report_annual.py  test_report_daily_weekly.py  test_report_monthly.py  test_report_quarterly.py  test_schema.py  test_simplefin.py  test_sync.py  test_taxpack.py  test_web_api.py
transactions/: categories.md  rules.md
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
(+125 files in other folders)
